[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = multivolumefile
description = multi volume file wrapper library
long_description = file: README.rst, Changelog.rst
long_description_content_type = text/x-rst
keywords = multivolume, file
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = https://github.com/miurahr/multivolume
classifiers =
      Development Status :: 3 - Alpha
      Environment :: Console
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3 :: Only
      Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
setup_requires =
      setuptools-scm>=3.5.0
      setuptools>=42.0
packages = find:

[options.package_data]
multivolumefile: py.typed, *.pyi

[options.extras_require]
test =
      pytest
      pytest-cov
      pyannotate
      coverage[toml]>=5.2
      coveralls>=2.1.1
      hypothesis
type =
      mypy
      mypy_extensions
check =
      check-manifest
      flake8
      flake8-black
      readme-renderer
      pygments
      isort>=5.0.3
      twine
